_generated-doc/2.2/config/quarkus-http-http-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-http-http-build-time-config_configuration]]link:#quarkus-http-http-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.root-path]]`link:#quarkus-http-http-build-time-config_quarkus.http.root-path[quarkus.http.root-path]`

[.description]
--
The HTTP root path. All web content will be served relative to this root path.
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.basic]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.basic[quarkus.http.auth.basic]`

[.description]
--
If basic auth should be enabled. If both basic and form auth is enabled then basic auth will be enabled in silent mode. If no authentication mechanisms are configured basic auth is the default.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.enabled]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.enabled[quarkus.http.auth.form.enabled]`

[.description]
--
If form authentication is enabled
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.login-page]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.login-page[quarkus.http.auth.form.login-page]`

[.description]
--
The login page
--|string 
|`/login.html`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.post-location]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.post-location[quarkus.http.auth.form.post-location]`

[.description]
--
The post location.
--|string 
|`/j_security_check`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.username-parameter]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.username-parameter[quarkus.http.auth.form.username-parameter]`

[.description]
--
The username field name.
--|string 
|`j_username`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.password-parameter]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.password-parameter[quarkus.http.auth.form.password-parameter]`

[.description]
--
The password field name.
--|string 
|`j_password`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.error-page]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.error-page[quarkus.http.auth.form.error-page]`

[.description]
--
The error page
--|string 
|`/error.html`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.landing-page]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.landing-page[quarkus.http.auth.form.landing-page]`

[.description]
--
The landing page to redirect to if there is no saved page to redirect back to
--|string 
|`/index.html`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.redirect-after-login]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.redirect-after-login[quarkus.http.auth.form.redirect-after-login]`

[.description]
--
Option to disable redirect to landingPage if there is no saved page to redirect back to. Form Auth POST is followed by redirect to landingPage by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.location-cookie]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.location-cookie[quarkus.http.auth.form.location-cookie]`

[.description]
--
Option to control the name of the cookie used to redirect the user back to where he want to get access to.
--|string 
|`quarkus-redirect-location`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.timeout]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.timeout[quarkus.http.auth.form.timeout]`

[.description]
--
The inactivity (idle) timeout When inactivity timeout is reached, cookie is not renewed and a new login is enforced.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT30M`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.new-cookie-interval]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.new-cookie-interval[quarkus.http.auth.form.new-cookie-interval]`

[.description]
--
How old a cookie can get before it will be replaced with a new cookie with an updated timeout, also referred to as "renewal-timeout". Note that smaller values will result in slightly more server load (as new encrypted cookies will be generated more often), however larger values affect the inactivity timeout as the timeout is set when a cookie is generated. For example if this is set to 10 minutes, and the inactivity timeout is 30m, if a users last request is when the cookie is 9m old then the actual timeout will happen 21m after the last request, as the timeout is only refreshed when a new cookie is generated. In other words no timeout is tracked on the server side; the timestamp is encoded and encrypted in the cookie itself and it is decrypted and parsed with each request.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1M`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-name]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-name[quarkus.http.auth.form.cookie-name]`

[.description]
--
The cookie that is used to store the persistent session
--|string 
|`quarkus-credential`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.realm]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.realm[quarkus.http.auth.realm]`

[.description]
--
The authentication realm
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.proactive]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.proactive[quarkus.http.auth.proactive]`

[.description]
--
If this is true and credentials are present then a user will always be authenticated before the request progresses. If this is false then an attempt will only be made to authenticate the user if a permission check is performed or the current user is required for some other reason.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.ssl.client-auth]]`link:#quarkus-http-http-build-time-config_quarkus.http.ssl.client-auth[quarkus.http.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED
--|`none`, `request`, `required` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.virtual]]`link:#quarkus-http-http-build-time-config_quarkus.http.virtual[quarkus.http.virtual]`

[.description]
--
If this is true then only a virtual channel will be set up for vertx web. We have this switch for testing purposes.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.non-application-root-path]]`link:#quarkus-http-http-build-time-config_quarkus.http.non-application-root-path[quarkus.http.non-application-root-path]`

[.description]
--
A common root path for non-application endpoints. Various extension-provided endpoints such as metrics, health,
and openapi are deployed under this path by default.

* Relative path (Default, `q`) ->
Non-application endpoints will be served from
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.
* Absolute path (`/q`) ->
Non-application endpoints will be served from the specified path.
* `${quarkus.http.root-path}` -> Setting this path to the same value as HTTP root path disables
this root path. All extension-provided endpoints will be served from `${quarkus.http.root-path}`.
--|string 
|`q`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.test-timeout]]`link:#quarkus-http-http-build-time-config_quarkus.http.test-timeout[quarkus.http.test-timeout]`

[.description]
--
The REST Assured client timeout for testing.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30S`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.enabled]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.enabled[quarkus.http.auth.permission."permissions".enabled]`

[.description]
--
Determines whether the entire permission set is enabled, or not. By default, if the permission set is defined, it is enabled.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.policy]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.policy[quarkus.http.auth.permission."permissions".policy]`

[.description]
--
The HTTP policy that this permission set is linked to. There are 3 built in policies: permit, deny and authenticated. Role based policies can be defined, and extensions can add their own policies.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.methods]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.methods[quarkus.http.auth.permission."permissions".methods]`

[.description]
--
The methods that this permission set applies to. If this is not set then they apply to all methods. Note that if a request matches any path from any permission set, but does not match the constraint due to the method not being listed then the request will be denied. Method specific permissions take precedence over matches that do not have any methods set. This means that for example if Quarkus is configured to allow GET and POST requests to /admin to and no other permissions are configured PUT requests to /admin will be denied.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.paths]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.paths[quarkus.http.auth.permission."permissions".paths]`

[.description]
--
The paths that this permission check applies to. If the path ends in /++*++ then this is treated as a path prefix, otherwise it is treated as an exact match. Matches are done on a length basis, so the most specific path match takes precedence. If multiple permission sets match the same path then explicit methods matches take precedence over over matches without methods set, otherwise the most restrictive permissions are applied.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.auth-mechanism]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.auth-mechanism[quarkus.http.auth.permission."permissions".auth-mechanism]`

[.description]
--
Path specific authentication mechanism which must be used to authenticate a user. It needs to match `HttpCredentialTransport` authentication scheme such as 'basic', 'bearer', 'form', etc.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.policy.-role-policy-.roles-allowed]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.policy.-role-policy-.roles-allowed[quarkus.http.auth.policy."role-policy".roles-allowed]`

[.description]
--
The roles that are allowed to access resources protected by this policy
--|list of string 
|required icon:exclamation-circle[title=Configuration property is required]

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
