_generated-doc/2.13/config/quarkus-http-http-build-time-config.adoc

:summaryTableId: quarkus-http-http-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-http-http-build-time-config_configuration]]link:#quarkus-http-http-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.root-path]]`link:#quarkus-http-http-build-time-config_quarkus.http.root-path[quarkus.http.root-path]`

[.description]
--
The HTTP root path. All web content will be served relative to this root path.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.basic]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.basic[quarkus.http.auth.basic]`

[.description]
--
If basic auth should be enabled. If both basic and form auth is enabled then basic auth will be enabled in silent mode. If no authentication mechanisms are configured basic auth is the default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_BASIC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_BASIC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.enabled]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.enabled[quarkus.http.auth.form.enabled]`

[.description]
--
If form authentication is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.login-page]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.login-page[quarkus.http.auth.form.login-page]`

[.description]
--
The login page

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_LOGIN_PAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_LOGIN_PAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/login.html`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.post-location]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.post-location[quarkus.http.auth.form.post-location]`

[.description]
--
The post location.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_POST_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_POST_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/j_security_check`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.username-parameter]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.username-parameter[quarkus.http.auth.form.username-parameter]`

[.description]
--
The username field name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_USERNAME_PARAMETER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_USERNAME_PARAMETER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`j_username`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.password-parameter]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.password-parameter[quarkus.http.auth.form.password-parameter]`

[.description]
--
The password field name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_PASSWORD_PARAMETER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_PASSWORD_PARAMETER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`j_password`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.error-page]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.error-page[quarkus.http.auth.form.error-page]`

[.description]
--
The error page

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_ERROR_PAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_ERROR_PAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/error.html`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.landing-page]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.landing-page[quarkus.http.auth.form.landing-page]`

[.description]
--
The landing page to redirect to if there is no saved page to redirect back to

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_LANDING_PAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_LANDING_PAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/index.html`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.redirect-after-login]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.redirect-after-login[quarkus.http.auth.form.redirect-after-login]`

[.description]
--
Option to disable redirect to landingPage if there is no saved page to redirect back to. Form Auth POST is followed by redirect to landingPage by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_REDIRECT_AFTER_LOGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_REDIRECT_AFTER_LOGIN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.location-cookie]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.location-cookie[quarkus.http.auth.form.location-cookie]`

[.description]
--
Option to control the name of the cookie used to redirect the user back to where he wants to get access to.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_LOCATION_COOKIE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_LOCATION_COOKIE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus-redirect-location`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.timeout]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.timeout[quarkus.http.auth.form.timeout]`

[.description]
--
The inactivity (idle) timeout When inactivity timeout is reached, cookie is not renewed and a new login is enforced.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT30M`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.new-cookie-interval]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.new-cookie-interval[quarkus.http.auth.form.new-cookie-interval]`

[.description]
--
How old a cookie can get before it will be replaced with a new cookie with an updated timeout, also referred to as "renewal-timeout". Note that smaller values will result in slightly more server load (as new encrypted cookies will be generated more often), however larger values affect the inactivity timeout as the timeout is set when a cookie is generated. For example if this is set to 10 minutes, and the inactivity timeout is 30m, if a users last request is when the cookie is 9m old then the actual timeout will happen 21m after the last request, as the timeout is only refreshed when a new cookie is generated. In other words no timeout is tracked on the server side; the timestamp is encoded and encrypted in the cookie itself, and it is decrypted and parsed with each request.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_NEW_COOKIE_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_NEW_COOKIE_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT1M`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-name]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-name[quarkus.http.auth.form.cookie-name]`

[.description]
--
The cookie that is used to store the persistent session

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_COOKIE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_COOKIE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus-credential`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-path]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-path[quarkus.http.auth.form.cookie-path]`

[.description]
--
The cookie path for the session and location cookies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_COOKIE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_COOKIE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.http-only-cookie]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.http-only-cookie[quarkus.http.auth.form.http-only-cookie]`

[.description]
--
Set the HttpOnly attribute to prevent access to the cookie via JavaScript.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_HTTP_ONLY_COOKIE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_HTTP_ONLY_COOKIE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-same-site]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.form.cookie-same-site[quarkus.http.auth.form.cookie-same-site]`

[.description]
--
SameSite attribute for the session and location cookies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_FORM_COOKIE_SAME_SITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_FORM_COOKIE_SAME_SITE+++`
endif::add-copy-button-to-env-var[]
-- a|
`strict`, `lax`, `none` 
|`strict`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.realm]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.realm[quarkus.http.auth.realm]`

[.description]
--
The authentication realm

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_REALM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_REALM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.proactive]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.proactive[quarkus.http.auth.proactive]`

[.description]
--
If this is true and credentials are present then a user will always be authenticated before the request progresses. If this is false then an attempt will only be made to authenticate the user if a permission check is performed or the current user is required for some other reason.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_PROACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_PROACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.ssl.client-auth]]`link:#quarkus-http-http-build-time-config_quarkus.http.ssl.client-auth[quarkus.http.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `request`, `required` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.virtual]]`link:#quarkus-http-http-build-time-config_quarkus.http.virtual[quarkus.http.virtual]`

[.description]
--
If this is true then only a virtual channel will be set up for vertx web. We have this switch for testing purposes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_VIRTUAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_VIRTUAL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.non-application-root-path]]`link:#quarkus-http-http-build-time-config_quarkus.http.non-application-root-path[quarkus.http.non-application-root-path]`

[.description]
--
A common root path for non-application endpoints. Various extension-provided endpoints such as metrics, health,
and openapi are deployed under this path by default.

* Relative path (Default, `q`) ->
Non-application endpoints will be served from
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.
* Absolute path (`/q`) ->
Non-application endpoints will be served from the specified path.
* `${quarkus.http.root-path}` -> Setting this path to the same value as HTTP root path disables
this root path. All extension-provided endpoints will be served from `${quarkus.http.root-path}`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_NON_APPLICATION_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_NON_APPLICATION_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`q`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.test-timeout]]`link:#quarkus-http-http-build-time-config_quarkus.http.test-timeout[quarkus.http.test-timeout]`

[.description]
--
The REST Assured client timeout for testing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_TEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_TEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.enable-compression]]`link:#quarkus-http-http-build-time-config_quarkus.http.enable-compression[quarkus.http.enable-compression]`

[.description]
--
If responses should be compressed. Note that this will attempt to compress all responses, to avoid compressing already compressed content (such as images) you need to set the following header: Content-Encoding: identity Which will tell vert.x not to compress the response.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ENABLE_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ENABLE_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.enable-decompression]]`link:#quarkus-http-http-build-time-config_quarkus.http.enable-decompression[quarkus.http.enable-decompression]`

[.description]
--
When enabled, vert.x will decompress the request's body if it's compressed. Note that the compression format (e.g., gzip) must be specified in the Content-Encoding header in the request.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ENABLE_DECOMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ENABLE_DECOMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.compress-media-types]]`link:#quarkus-http-http-build-time-config_quarkus.http.compress-media-types[quarkus.http.compress-media-types]`

[.description]
--
List of media types for which the compression should be enabled automatically, unless declared explicitly via `Compressed` or `Uncompressed`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_COMPRESS_MEDIA_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_COMPRESS_MEDIA_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`text/html,text/plain,text/xml,text/css,text/javascript,application/javascript`


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.compression-level]]`link:#quarkus-http-http-build-time-config_quarkus.http.compression-level[quarkus.http.compression-level]`

[.description]
--
The compression level used when compression support is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_COMPRESSION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_COMPRESSION_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.enabled]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.enabled[quarkus.http.auth.permission."permissions".enabled]`

[.description]
--
Determines whether the entire permission set is enabled, or not. By default, if the permission set is defined, it is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.policy]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.policy[quarkus.http.auth.permission."permissions".policy]`

[.description]
--
The HTTP policy that this permission set is linked to. There are 3 built in policies: permit, deny and authenticated. Role based policies can be defined, and extensions can add their own policies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__POLICY+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.methods]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.methods[quarkus.http.auth.permission."permissions".methods]`

[.description]
--
The methods that this permission set applies to. If this is not set then they apply to all methods. Note that if a request matches any path from any permission set, but does not match the constraint due to the method not being listed then the request will be denied. Method specific permissions take precedence over matches that do not have any methods set. This means that for example if Quarkus is configured to allow GET and POST requests to /admin to and no other permissions are configured PUT requests to /admin will be denied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__METHODS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.paths]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.paths[quarkus.http.auth.permission."permissions".paths]`

[.description]
--
The paths that this permission check applies to. If the path ends in /++*++ then this is treated as a path prefix, otherwise it is treated as an exact match. Matches are done on a length basis, so the most specific path match takes precedence. If multiple permission sets match the same path then explicit methods matches take precedence over matches without methods set, otherwise the most restrictive permissions are applied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__PATHS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.auth-mechanism]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.permission.-permissions-.auth-mechanism[quarkus.http.auth.permission."permissions".auth-mechanism]`

[.description]
--
Path specific authentication mechanism which must be used to authenticate a user. It needs to match `HttpCredentialTransport` authentication scheme such as 'basic', 'bearer', 'form', etc.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_PERMISSION__PERMISSIONS__AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-http-http-build-time-config_quarkus.http.auth.policy.-role-policy-.roles-allowed]]`link:#quarkus-http-http-build-time-config_quarkus.http.auth.policy.-role-policy-.roles-allowed[quarkus.http.auth.policy."role-policy".roles-allowed]`

[.description]
--
The roles that are allowed to access resources protected by this policy

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_POLICY__ROLE_POLICY__ROLES_ALLOWED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_POLICY__ROLE_POLICY__ROLES_ALLOWED+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|required icon:exclamation-circle[title=Configuration property is required]

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
